# captiw

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
captiw/: __main__.py
captiw/webapp/: __init__.py  config.py  routes.py
tech-designs/: README.md
tech-designs/webserver/: README.md  aiohttp_api.py  fastapi_api.py  flask_api.py  requirements.txt  static.lua  validate.lua
