[tool.poetry]
name = "captiw"
version = "0.1.0"
description = ""
authors = ["Dmitry Ryzhikov <d.ryzhykau@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
pydantic = "^1.5.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pre-commit = "^2.5.1"
flake8 = "^3.8.3"
isort = {extras = ["pyproject"], version = "^4.3.21"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
